--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass-middleware": "0.9.8",
     "pug": "~2.0.0-beta10",
     "roslib": "github:robotwebtools/roslibjs#master",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "url-parse": "^1.1.7"
   }
 }
