--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "client": "webpack --watch"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -11,10 +12,17 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
-    "node-sass-middleware": "0.9.8",
     "pug": "~2.0.0-beta10",
     "roslib": "github:robotwebtools/roslibjs#master",
     "serve-favicon": "~2.3.2",
     "url-parse": "^1.1.7"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "css-loader": "^0.26.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^5.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1"
   }
 }
