--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "fast-csv": "^2.3.1",
+    "express-fileupload": "0.0.7",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta10",
     "roslib": "github:robotwebtools/roslibjs#master",
