--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "~4.14.1",
     "fast-csv": "^2.3.1",
     "express-fileupload": "0.0.7",
+    "gm": "^1.23.0",
     "morgan": "~1.7.0",
+    "netpbm": "^1.1.1",
+    "node-base64-image": "^1.0.3",
     "pug": "~2.0.0-beta10",
     "roslib": "github:robotwebtools/roslibjs#master",
     "serve-favicon": "~2.3.2",
@@ -22,6 +25,8 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.26.1",
+    "image-webpack-loader": "^3.2.0",
+    "leaflet": "^1.0.3",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
