--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fast-csv": "^2.3.1",
     "gm": "^1.23.0",
     "js-yaml": "^3.8.1",
+    "mathjs": "^3.9.1",
     "morgan": "~1.7.0",
     "netpbm": "^1.1.1",
     "node-base64-image": "^1.0.3",
