--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fast-csv": "^2.3.1",
     "fs-promise": "^2.0.0",
     "gm": "^1.23.0",
+    "jimp": "^0.2.27",
     "js-yaml": "^3.8.1",
     "mathjs": "^3.9.1",
     "morgan": "~1.7.0",
