--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "image-webpack-loader": "^3.2.0",
     "leaflet": "^1.0.3",
     "leaflet-imageoverlay-rotated": "github:ivansanchez/Leaflet.ImageOverlay.Rotated#gh-pages",
