--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "image-webpack-loader": "^3.2.0",
     "leaflet": "^1.0.3",
     "leaflet-imageoverlay-rotated": "github:ivansanchez/Leaflet.ImageOverlay.Rotated#gh-pages",
