--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jimp": "^0.2.27",
     "js-yaml": "^3.8.1",
     "mathjs": "^3.9.1",
+    "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "netpbm": "^1.1.1",
     "node-base64-image": "^1.0.3",
