Update dependencies to latest version.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "client": "webpack --watch"
   },
   "dependencies": {
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.17.1",
     "config": "^1.25.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
-    "express-fileupload": "0.0.7",
+    "express": "^4.15.2",
+    "express-fileupload": "^0.1.2",
     "fast-csv": "^2.3.1",
     "fs-promise": "^2.0.0",
     "gm": "^1.23.0",
@@ -20,7 +19,7 @@
     "js-yaml": "^3.8.1",
     "mathjs": "^3.9.1",
     "moment": "^2.18.1",
-    "morgan": "~1.7.0",
+    "morgan": "^1.8.1",
     "netpbm": "^1.1.1",
     "node-base64-image": "^1.0.3",
     "pg": "^6.1.4",
@@ -28,21 +27,21 @@
     "regression": "^1.4.0",
     "roslib": "github:robotwebtools/roslibjs#master",
     "sequelize": "^3.30.2",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "^2.4.2",
     "transformation-matrix-js": "^2.7.1",
     "url-parse": "^1.1.7"
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "image-webpack-loader": "^3.2.0",
     "leaflet": "^1.0.3",
     "leaflet-imageoverlay-rotated": "github:ivansanchez/Leaflet.ImageOverlay.Rotated#gh-pages",
     "node-sass": "^4.5.0",
-    "sass-loader": "^5.0.1",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
